Firmware load failure with Navi GPUs (Navi10, Beige Goby) on aarch64
When I try my Radeon Pro W6400 [1002:7422] on my Honeycomb LX2K board (NXP LX2160A), the firmware fails to load:
[drm] psp gfx command ID_LOAD_TOC(0x20) failed and response status is (0x0)
The kernel then oopses:
[ 11.913595] Unable to handle kernel write to read-only memory at virtual address 0000000000000090
…
[ 12.124342] Call trace:
[ 12.126777] drm_sched_fini+0xd0/0x100 [gpu_sched]
[ 12.131564] amdgpu_fence_driver_sw_fini+0x154/0x19c [amdgpu]
[ 12.137748] amdgpu_device_fini_sw+0x3c/0x250 [amdgpu]
[ 12.143299] amdgpu_driver_release_kms+0x28/0x50 [amdgpu]
Distro is Ubuntu 22.04, kernel is the "kernel-ppa/mainline" 6.1.0-rc5, but the same happens on the 6.0.9.
Notably, the same card works fine on x86-64, and there's a log message that seems silly (I thought AGP was obsolete?)
amdgpu: AGP: 267894784M 0x0000008400000000 - 0x0000FFFFFFFFFFFF