drm/amdgpu: Map VRAM with uncached ioremap() if !drm_arch_can_wc_memory()

Some architectures/platforms suffer from cache coherency problems if the
device memory is mapped write-combining. In reality this can lead to
firmware loading failures of Navi GPUs on such platforms; at least arm64
and loongarch are affected, and possibly more.

The drm_arch_can_wc_memory() helper was added earlier in
commit 4b0e4e4af6c6d ("drm: add helper to check for wc memory support"),
and with this information available we can now workaround such faulty
behavior.

See: https://gitlab.freedesktop.org/drm/amd/-/issues/2313
Suggested-by: Huacai Chen <chenhuacai@kernel.org>
Signed-off-by: WANG Xuerui <git@xen0n.name>